@@ -7,7 +7,9 @@ TODO inlining : allow inlined getter/setter
 TODO inlining : substitute class+function type parameters in order to have fully typed expressions
 
 2008-??-??: 2.0
-	remove neko max array declaration (fixed in 1.7.0)
+	genneko : remove big array error (fixed in neko 1.7.1)
+	fixed neko.net.ThreadRemotingServer.onXML
+	genswf9 : fixed verify error with Null<Class> (was using dynamic access)
 
 2008-04-05: 1.19
 	fixed flash9 Array.toString
